tests/testfiles/valid/basic/comment2.c
int main() {
    int d = 1;
    /*Ceci est un commentaire
     *
     * commentaire
     */
    return d;
}