tests/testfiles/invalid/arithmetics/func_multiply.c
int main() {
    return 10 * main;
}
